Fixing spacing for oauth2 client instructions

--- a/src/themes/admin/admin-default/css/options-page.css
+++ b/src/themes/admin/admin-default/css/options-page.css
@@ -299,3 +299,14 @@ textarea {
     width: 100% !important;
     height: 100px !important;
 }
+
+
+/**
+ **********************************************************************************************
+ **** OAUTH2 STUFF
+ **********************************************************************************************
+ */
+.oauth2-client-registration li {
+
+    margin-top: 5px;
+}
